; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_gpio_pulse.c_gpio_pulse_cancel.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_gpio_pulse.c_gpio_pulse_cancel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"gpio.pulse\00", align 1
@active_pulser = common dso_local global i32* null, align 8
@TIMER_OWNER = common dso_local global i32 0, align 4
@active_pulser_ref = common dso_local global i32 0, align 4
@LUA_NOREF = common dso_local global i32 0, align 4
@LUA_REGISTRYINDEX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @gpio_pulse_cancel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gpio_pulse_cancel(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i32* @luaL_checkudata(i32* %7, i32 1, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  store i32* %8, i32** %4, align 8
  %9 = load i32*, i32** @active_pulser, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = icmp ne i32* %9, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %26

13:                                               ; preds = %1
  %14 = load i32, i32* @TIMER_OWNER, align 4
  %15 = call i32 @platform_hw_timer_close(i32 %14)
  %16 = load i32*, i32** %3, align 8
  %17 = load i32*, i32** @active_pulser, align 8
  %18 = call i32 @gpio_pulse_push_state(i32* %16, i32* %17)
  store i32 %18, i32* %5, align 4
  store i32* null, i32** @active_pulser, align 8
  %19 = load i32, i32* @active_pulser_ref, align 4
  store i32 %19, i32* %6, align 4
  %20 = load i32, i32* @LUA_NOREF, align 4
  store i32 %20, i32* @active_pulser_ref, align 4
  %21 = load i32*, i32** %3, align 8
  %22 = load i32, i32* @LUA_REGISTRYINDEX, align 4
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @luaL_unref(i32* %21, i32 %22, i32 %23)
  %25 = load i32, i32* %5, align 4
  store i32 %25, i32* %2, align 4
  br label %26

26:                                               ; preds = %13, %12
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local i32* @luaL_checkudata(i32*, i32, i8*) #1

declare dso_local i32 @platform_hw_timer_close(i32) #1

declare dso_local i32 @gpio_pulse_push_state(i32*, i32*) #1

declare dso_local i32 @luaL_unref(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
